--- a/index.css
+++ b/index.css
@@ -1,3 +1,34 @@
-img {
+body {
+  margin: 0;
+  background-color: rgb(244, 205, 244);
+}
+
+header {
+  background-color: rgb(250, 185, 196);
+  padding: 16px;
+  text-align: center;
+}
+header .logo-name {
+  margin-bottom: 48px;
+}
+header .logo-name img {
   width: 100px;
+}
+header .logo-name .name {
+  font-size: 32px;
+}
+header .logo-name .name .coder-text {
+  color: aqua;
+}
+header .logo-name .name .academy-text {
+  color: rgb(11, 179, 251);
+}
+header .logo-name #nav-items {
+  display: flex;
+  justify-content: space-around;
+  font-size: 18px;
+}
+header .logo-name a {
+  text-decoration: none;
+  color: blue;
 }/*# sourceMappingURL=index.css.map */
