--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,53 @@
-img {
-    width: 100px;
+$primary-color: rgb(244, 205, 244);
+$secondary-color: rgb(250, 185, 196);
+$primary-background: rgb(239, 113, 239);
+
+
+
+body {
+    margin: 0;
+    background-color: $primary-color;
 }
+
+header {
+    background-color: $secondary-color;
+    padding: 16px;
+    text-align: center;
+
+    .logo-name {
+        margin-bottom:48px;
+        
+        img {
+            width: 100px;
+        }
+        
+        .name {
+            font-size: 32px;
+
+            .coder-text {
+                color: aqua;
+            }
+
+            .academy-text {
+                color:rgb(11, 179, 251);
+            }
+
+        }
+
+       
+        #nav-items {
+            display: flex;
+            justify-content: space-around;
+            font-size: 18px;
+        }
+
+        a {
+            text-decoration: none;
+            color: blue;
+        }
+        }
+    }
+
+
+
+
