--- a/index.scss
+++ b/index.scss
@@ -37,7 +37,7 @@ header {
             font-size: 32px;
 
             .coder-text {
-                color: aqua;
+                color: rgb(26, 195, 195);
             }
 
             .academy-text {
