--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ header .logo-name .name {
   font-size: 32px;
 }
 header .logo-name .name .coder-text {
-  color: aqua;
+  color: rgb(26, 195, 195);
 }
 header .logo-name .name .academy-text {
   color: rgb(11, 179, 251);
@@ -71,4 +71,12 @@ footer .social-media a i {
 }
 footer .social-media .info {
   color: rgb(35, 34, 34);
+}
+
+@media screen and (min-width: 600px) {
+  footer .social-media {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }/*# sourceMappingURL=index.css.map */
