--- a/index.scss
+++ b/index.scss
@@ -105,7 +105,7 @@ footer {
 }
 
 
-@media screen (min-width: 600px) {
+@media screen and (min-width: 600px) {
     footer {
         .social-media {
             width: 50%;
