--- a/index.scss
+++ b/index.scss
@@ -1,13 +1,10 @@
-$primary-color: rgb(244, 205, 244);
-$secondary-color: rgb(250, 185, 196);
-$primary-background: rgb(239, 113, 239);
+@import "./styles/defaults/colors";
+@import "./styles/defaults/breakpoints";
+@import "./styles/components/header";
+@import "./styles/components/footer";
 
-@mixin background-stuff() {
-    background-color: $secondary-color;
-    padding: 16px;
-    text-align: center;
 
-}
+
 
 body {
     margin: 0;
@@ -19,98 +16,5 @@ body {
     justify-content: space-between;
 }
 
-header {
-    @include background-stuff();
-
-    .logo-name {
-        @media  screen and (max-width: 600px) {
-            margin-bottom: 48px;
-            
-        }
-        margin-bottom:48px;
-        
-        img {
-            width: 100px;
-        }
-        
-        .name {
-            font-size: 32px;
-
-            .coder-text {
-                color: rgb(26, 195, 195);
-            }
-
-            .academy-text {
-                color:rgb(11, 179, 251);
-            }
-
-        }
-        #nav-items {
-            display: flex;
-            justify-content: space-around;
-            font-size: 18px;
-        }
-
-        a {
-            text-decoration: none;
-            color: blue;
-        }
-        }
-    }
-
-    @media screen and (min-width: 600px) {
-        header {
-            display: flex;
-            align-items: flex-end;
-            justify-content: space-between;
-            
-            .logo-name {
-
-                .name {
-                    margin-bottom: 0;
-                }
-            }
-    
-        
-            #nav-items {
-                width: 50%;
-
-            }
 
 
-        }
-    }
-
-
-footer {
-    @include background-stuff();
-
-    .social-media {
-        display: flex; 
-        justify-content: space-around;
-        margin-bottom: 32px;
-
-        a {
-            i{
-                font-size: 24px;
-                color: rgb(35, 34, 34);
-            }
-        }
-
-        .info {
-            color: rgb(35, 34, 34);
-        }
-    }
-
-}
-
-
-@media screen and (min-width: 600px) {
-    footer {
-        .social-media {
-            width: 50%;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    }
-}
